# OpenCodeEval

./: .gitignore  README.md  compress.sh  pyproject.toml  requirements.txt
EvalAgent/config/: cmd.jinja
OpenCodeEval/: args.py  factory.py  main.py  sanitize.py  utils.py
OpenCodeEval/backend/: base.py  hf.py  openai.py  sglang.py  utils.py  vllm.py
OpenCodeEval/benchmark/: BigCodeBench.py  Bird.py  HumanEval.py  LeetCode.py  LiveCodeBench.py  MBPP.py  Spider.py  base.py  mbpp.py  mlbench.py  understandml.py
OpenCodeEval/eval/: func_eval.py  sanitize.py  sql_test.py
agent/: eval.sh  main.py
bigcode-evaluation-harness/: eval_base.sh
eval/: lark_message.py  main.py
eval/HumanEval/: evaluations.jsonl  generations.jsonl  prompts.jsonl  results.jsonl  solutions.jsonl
eval/config/: benchmark.json  benchmark_sample.json  cmd.jinja
script/: HumanEvalBase_chat.sh  HumanEvalPlus_chat.sh  MBPPBase_chat.sh  MBPPPlus_chat.sh  jr_bird_vllm.sh  jr_spider_vllm.sh  test_base_he.sh  test_base_mb.sh  test_bch.sh  test_hep.sh  test_lc.sh  test_mbp.sh
scripts/: HumanEval_chat.sh  test_bc.sh  test_he.sh  test_mb.sh  test_mbb.sh
scripts/save/: evaluation.jsonl  generations.jsonl  prompts.jsonl  result.json  solutions.jsonl
src/: args.py  factory.py  main.py  sanitize.py  sql_utils.py  test.ipynb  utils.py
src/backend/: openai.py  vllm.py
src/benchmark/: BigCodeBench.py  Bird.py  HumanEval.py  LeetCode.py  MBPP.py  MBPPPlus.py  Spider.py  base.py
src/data/: dataset.sh
src/eval/: execution.py  sql_eval.py  unit_test.py  unittest_execution.py
(+81 files in other folders)
