[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenCodeEval"
version = "0.1.0"
description = "OpenCodeEval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "torch",
    "transformers",
    "datasets",
    "openai",
    "func_timeout",
]

[project.optional-dependencies]
vllm = ["vllm"]
sglang = ["sglang"]

[tool.setuptools.packages.find]
where = ["."]
include = ["OpenCodeEval", "OpenCodeEval.*"]

[project.scripts]
OpenCodeEval = "OpenCodeEval.main:main"